feat(3-week): добавил ручку для просмотра истории результатов погоды по городу
