# 3-week/internal/adapters/transport/http/v1/weather/routes.go
@@ -6,4 +6,5 @@ func RegisterRoutes(mux *http.ServeMux, service Service) {
 	h := NewHandler(service)
 
 	mux.HandleFunc("GET /api/v1/users/{id}/weather", h.GetByUserID)
+	mux.HandleFunc("GET /api/v1/users/{id}/weather/history", h.GetHistory)
 }
